vlc-java/src/main/java/com/tek/vlc/jna/LibvlcLibrary.java

    /**
     * Frees memory allocated by libvlc_log_open().<br>
     * \param p_log libvlc log instance or NULL<br>
     * Original signature : <code>void libvlc_log_close(libvlc_log_t*)</code><br>
     * <i>native declaration : line 557</i><br>
     * @deprecated use the safer method {@link #libvlc_log_close(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    void libvlc_log_close(Pointer p_log);
    /**
     * Frees memory allocated by libvlc_log_open().<br>
     * \param p_log libvlc log instance or NULL<br>
     * Original signature : <code>void libvlc_log_close(libvlc_log_t*)</code><br>
     * <i>native declaration : line 557</i>
     */
    void libvlc_log_close(PointerByReference p_log);
    /**
     * Always returns zero.<br>
     * This function is only provided for backward compatibility.<br>
     * \param p_log ignored<br>
     * \return always zero<br>
     * Original signature : <code>int libvlc_log_count(const libvlc_log_t*)</code><br>
     * <i>native declaration : line 567</i><br>
     * @deprecated use the safer method {@link #libvlc_log_count(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    int libvlc_log_count(Pointer p_log);
    /**
     * Always returns zero.<br>
     * This function is only provided for backward compatibility.<br>
     * \param p_log ignored<br>
     * \return always zero<br>
     * Original signature : <code>int libvlc_log_count(const libvlc_log_t*)</code><br>
     * <i>native declaration : line 567</i>
     */
    int libvlc_log_count(PointerByReference p_log);
    /**
     * This function does nothing.<br>
     * It is only provided for backward compatibility.<br>
     * \param p_log ignored<br>
     * Original signature : <code>void libvlc_log_clear(libvlc_log_t*)</code><br>
     * <i>native declaration : line 576</i><br>
     * @deprecated use the safer method {@link #libvlc_log_clear(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    void libvlc_log_clear(Pointer p_log);
    /**
     * This function does nothing.<br>
     * It is only provided for backward compatibility.<br>
     * \param p_log ignored<br>
     * Original signature : <code>void libvlc_log_clear(libvlc_log_t*)</code><br>
     * <i>native declaration : line 576</i>
     */
    void libvlc_log_clear(PointerByReference p_log);
    /**
     * This function does nothing useful.<br>
     * It is only provided for backward compatibility.<br>
     * \param p_log ignored<br>
     * \return an unique pointer or NULL on error or if the parameter was NULL<br>
     * Original signature : <code>libvlc_log_iterator_t* libvlc_log_get_iterator(const libvlc_log_t*)</code><br>
     * <i>native declaration : line 586</i><br>
     * @deprecated use the safer method {@link #libvlc_log_get_iterator(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    PointerByReference libvlc_log_get_iterator(Pointer p_log);
    /**
     * This function does nothing useful.<br>
     * It is only provided for backward compatibility.<br>
     * \param p_log ignored<br>
     * \return an unique pointer or NULL on error or if the parameter was NULL<br>
     * Original signature : <code>libvlc_log_iterator_t* libvlc_log_get_iterator(const libvlc_log_t*)</code><br>
     * <i>native declaration : line 586</i>
     */
    PointerByReference libvlc_log_get_iterator(PointerByReference p_log);
    /**
     * Frees memory allocated by libvlc_log_get_iterator().<br>
     * \param p_iter libvlc log iterator or NULL<br>
     * Original signature : <code>void libvlc_log_iterator_free(libvlc_log_iterator_t*)</code><br>
     * <i>native declaration : line 594</i><br>
     * @deprecated use the safer method {@link #libvlc_log_iterator_free(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    void libvlc_log_iterator_free(Pointer p_iter);
    /**
     * Frees memory allocated by libvlc_log_get_iterator().<br>
     * \param p_iter libvlc log iterator or NULL<br>
     * Original signature : <code>void libvlc_log_iterator_free(libvlc_log_iterator_t*)</code><br>
     * <i>native declaration : line 594</i>
     */
    void libvlc_log_iterator_free(PointerByReference p_iter);
    /**
     * Always returns zero.<br>
     * This function is only provided for backward compatibility.<br>
     * \param p_iter ignored<br>
     * \return always zero<br>
     * Original signature : <code>int libvlc_log_iterator_has_next(const libvlc_log_iterator_t*)</code><br>
     * <i>native declaration : line 604</i><br>
     * @deprecated use the safer method {@link #libvlc_log_iterator_has_next(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    int libvlc_log_iterator_has_next(Pointer p_iter);
    /**
     * Always returns zero.<br>
     * This function is only provided for backward compatibility.<br>
     * \param p_iter ignored<br>
     * \return always zero<br>
     * Original signature : <code>int libvlc_log_iterator_has_next(const libvlc_log_iterator_t*)</code><br>
     * <i>native declaration : line 604</i>
     */
    int libvlc_log_iterator_has_next(PointerByReference p_iter);
    /**
     * Always returns NULL.<br>
     * This function is only provided for backward compatibility.<br>
     * \param p_iter libvlc log iterator or NULL<br>
     * \param p_buf ignored<br>
     * \return always NULL<br>
     * Original signature : <code>libvlc_log_message_t* libvlc_log_iterator_next(libvlc_log_iterator_t*, libvlc_log_message_t*)</code><br>
     * <i>native declaration : line 615</i><br>
     * @deprecated use the safer method {@link #libvlc_log_iterator_next(com.sun.jna.ptr.PointerByReference, libvlc.libvlc_log_message_t)} instead
     */
    @Deprecated 
    libvlc_log_message_t libvlc_log_iterator_next(Pointer p_iter, libvlc_log_message_t p_buf);
    /**
     * Always returns NULL.<br>
     * This function is only provided for backward compatibility.<br>
     * \param p_iter libvlc log iterator or NULL<br>
     * \param p_buf ignored<br>
     * \return always NULL<br>
     * Original signature : <code>libvlc_log_message_t* libvlc_log_iterator_next(libvlc_log_iterator_t*, libvlc_log_message_t*)</code><br>
     * <i>native declaration : line 615</i>
     */
    libvlc_log_message_t libvlc_log_iterator_next(PointerByReference p_iter, libvlc_log_message_t p_buf);
    /**
     * Release a list of module descriptions.<br>
     * \param p_list the list to be released<br>
     * Original signature : <code>void libvlc_module_description_list_release(libvlc_module_description_t*)</code><br>
     * <i>native declaration : line 638</i>
     */
    void libvlc_module_description_list_release(libvlc_module_description_t p_list);
    /**
     * Returns a list of audio filters that are available.<br>
     * \param p_instance libvlc instance<br>
     * \return a list of module descriptions. It should be freed with libvlc_module_description_list_release().<br>
     *         In case of an error, NULL is returned.<br>
     * \see libvlc_module_description_t<br>
     * \see libvlc_module_description_list_release<br>
     * Original signature : <code>libvlc_module_description_t* libvlc_audio_filter_list_get(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 652</i><br>
     * @deprecated use the safer method {@link #libvlc_audio_filter_list_get(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    libvlc_module_description_t libvlc_audio_filter_list_get(Pointer p_instance);
    /**
     * Returns a list of audio filters that are available.<br>
     * \param p_instance libvlc instance<br>
     * \return a list of module descriptions. It should be freed with libvlc_module_description_list_release().<br>
     *         In case of an error, NULL is returned.<br>
     * \see libvlc_module_description_t<br>
     * \see libvlc_module_description_list_release<br>
     * Original signature : <code>libvlc_module_description_t* libvlc_audio_filter_list_get(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 652</i>
     */
    libvlc_module_description_t libvlc_audio_filter_list_get(PointerByReference p_instance);
    /**
     * Returns a list of video filters that are available.<br>
     * \param p_instance libvlc instance<br>
     * \return a list of module descriptions. It should be freed with libvlc_module_description_list_release().<br>
     *         In case of an error, NULL is returned.<br>
     * \see libvlc_module_description_t<br>
     * \see libvlc_module_description_list_release<br>
     * Original signature : <code>libvlc_module_description_t* libvlc_video_filter_list_get(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 666</i><br>
     * @deprecated use the safer method {@link #libvlc_video_filter_list_get(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    libvlc_module_description_t libvlc_video_filter_list_get(Pointer p_instance);
    /**
     * Returns a list of video filters that are available.<br>
     * \param p_instance libvlc instance<br>
     * \return a list of module descriptions. It should be freed with libvlc_module_description_list_release().<br>
     *         In case of an error, NULL is returned.<br>
     * \see libvlc_module_description_t<br>
     * \see libvlc_module_description_list_release<br>
     * Original signature : <code>libvlc_module_description_t* libvlc_video_filter_list_get(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 666</i>
     */
    libvlc_module_description_t libvlc_video_filter_list_get(PointerByReference p_instance);
    /**
     * Return the current time as defined by LibVLC. The unit is the microsecond.<br>
     * Time increases monotonically (regardless of time zone changes and RTC<br>
     * adjustements).<br>
     * The origin is arbitrary but consistent across the whole system<br>
     * (e.g. the system uptim, the time since the system was booted).<br>
     * \note On systems that support it, the POSIX monotonic clock is used.<br>
     * Original signature : <code>int64_t libvlc_clock()</code><br>
     * <i>native declaration : line 684</i>
     */
    long libvlc_clock();
    /**
     * Return the delay (in microseconds) until a certain timestamp.<br>
     * \param pts timestamp<br>
     * \return negative if timestamp is in the past,<br>
     * positive if it is in the future<br>
     * Original signature : <code>int64_t libvlc_delay(int64_t)</code><br>
     * <i>native declaration : line 692</i>
     */
    long libvlc_delay(long pts);
    /**
     * Create a media with a certain given media resource location,<br>
     * for instance a valid URL.<br>
     * \note To refer to a local file with this function,<br>
     * the file://... URI syntax <b>must</b> be used (see IETF RFC3986).<br>
     * We recommend using libvlc_media_new_path() instead when dealing with<br>
     * local files.<br>
     * \see libvlc_media_release<br>
     * \param p_instance the instance<br>
     * \param psz_mrl the media location<br>
     * \return the newly created media or NULL on error<br>
     * Original signature : <code>libvlc_media_t* libvlc_media_new_location(libvlc_instance_t*, const char*)</code><br>
     * <i>native declaration : line 1048</i><br>
     * @deprecated use the safer methods {@link #libvlc_media_new_location(com.sun.jna.ptr.PointerByReference, java.lang.String)} and {@link #libvlc_media_new_location(com.sun.jna.ptr.PointerByReference, com.sun.jna.Pointer)} instead
     */
    @Deprecated 
    PointerByReference libvlc_media_new_location(Pointer p_instance, Pointer psz_mrl);
